// Code generated by oracle. DO NOT EDIT.

syntax = "proto3";

package arc.ir.pb;

import "arc/go/types/pb/types.proto";

option go_package = "github.com/synnaxlabs/arc/ir/pb";

enum EdgeKind {
  EDGE_KIND_UNSPECIFIED = 0;
  EDGE_KIND_CONTINUOUS = 1;
  EDGE_KIND_ONE_SHOT = 2;
}

message Handle {
  string node = 1;
  string param = 2;
}

message Edge {
  Handle source = 1;
  Handle target = 2;
  EdgeKind kind = 3;
}

message StratumWrapper {
  repeated string values = 1;
}

message Stage {
  string key = 1;
  repeated string nodes = 2;
  repeated StratumWrapper strata = 3;
}

message Sequence {
  string key = 1;
  repeated Stage stages = 2;
}

message Body {
  string raw = 1;
}

message Function {
  string key = 1;
  Body body = 2;
  repeated .arc.types.pb.Param config = 3;
  repeated .arc.types.pb.Param inputs = 4;
  repeated .arc.types.pb.Param outputs = 5;
  .arc.types.pb.Channels channels = 6;
}

message Node {
  string key = 1;
  string type = 2;
  repeated .arc.types.pb.Param config = 3;
  repeated .arc.types.pb.Param inputs = 4;
  repeated .arc.types.pb.Param outputs = 5;
  .arc.types.pb.Channels channels = 6;
}

message IR {
  repeated Function functions = 1;
  repeated Node nodes = 2;
  repeated Edge edges = 3;
  repeated StratumWrapper strata = 4;
  repeated Sequence sequences = 5;
}
